--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,12 +12,6 @@ $sunny: rebeccapurple;
 $shaper: limegreen; 
 $weyland-consortium: darkgreen;
 
-@mixin cardBorder( $color: black ) {
-  border-left: 5px solid $color;
-  border-radius: 5px;
-  margin: 0.5rem 0 0.5rem 0;
-}
-
 .row {
   display: flex;
 }
@@ -49,6 +43,31 @@ $weyland-consortium: darkgreen;
   }
 }
 
+.card-cost {
+  float: right;
+  border-radius: 10px;
+  text-align: center;
+  width: 1.5em;
+  height: 1.2em;
+  background-color: lightgrey;
+}
+
+.agenda-info {
+  float: right;
+  border-radius: 2px;
+  text-align: center;
+  height: 1.2em;
+  padding: 0.2em;
+  background-color: lighten(olive, 20%);
+}
+
+// For colored card borders (to the left)
+@mixin cardBorder( $color: black ) {
+  border-left: 5px solid $color;
+  border-radius: 5px;
+  margin: 0.5rem 0 0.5rem 0;
+}
+
 .card-neutral-corp {
   @include cardBorder($neutral-corp);
 }
@@ -56,7 +75,6 @@ $weyland-consortium: darkgreen;
 .card-neutral-runner {
   @include cardBorder($neutral-runner);
 }
-
 
 .card-criminal {
   @include cardBorder($criminal);
@@ -82,7 +100,7 @@ $weyland-consortium: darkgreen;
   @include cardBorder($weyland-consortium);
 }
 
-.apex {
+.card-apex {
   @include cardBorder($apex);
 }
 
