--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="ng-app">
+<div class="ng-app nr-page">
   <router-outlet>
   </router-outlet>
 </div>
