--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 // Assign to the different checkboxes and such
-$runner: red;
-$corp: blue;
+$runner: crimson;
+$corp: royalblue;
 
 // Various faction specific colors and styling elements
 $adam: olive;
@@ -107,6 +107,28 @@ $weyland-consortium: darkgreen;
   @include faction-cls($anarch, 'anarch');
 }
 
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
 
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
 
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$nr-app-primary: mat-palette($mat-blue);
+$nr-app-accent:  mat-palette($mat-grey, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$nr-app-warn:    mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$nr-app-theme: mat-light-theme($nr-app-primary, $nr-app-accent, $nr-app-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($nr-app-theme);
 
